--- a/client/treehacksFood.html
+++ b/client/treehacksFood.html
@@ -24,9 +24,12 @@
   </div>
 </template>
 
-<body>
-{{>submitrecipes}}  
+<body> 
 </body>
+
+<template name="items">
+items
+</template>
  
 <template name="recipe">
 <h1>{{name}}</h1>
