--- a/client/treehacksFood.html
+++ b/client/treehacksFood.html
@@ -7,6 +7,7 @@
     <header>
       <h1>Submit Recipes</h1>
     </header>
+	<a href="/nomrecipe" class="refresh">workpls</a><br><br>
 	
 	<form class="new-recipe">
 		<input type="text" name="name" placeholder="Recipe Name">
@@ -30,6 +31,14 @@
 <template name="items">
 items
 </template>
+
+ <template name="nomrecipe">
+ {{#each show}}
+ {{> recipe}}
+ {{/each}}
+<a class="refresh">workpls</a>
+ </template>
+ 
  
 <template name="recipe">
 <h1>{{name}}</h1>
