Front end stuff.
I couldn't make it pretty. OTL
I'm sorry I'm a failure *weeps*

--- a/client/index.html
+++ b/client/index.html
@@ -8,5 +8,8 @@
 <template name="index">
 <div class="container">
     <h1 class="index-title">OH, MY NOM! </h1>
+	<a href="/nomrecipe" class="gimme">GIMME</a><br><br>
+
+	
 </div>
 </template>
