Added search function

--- a/client/nomrecipe.html
+++ b/client/nomrecipe.html
@@ -17,7 +17,17 @@
 <h1>{{name}}</h1>
 <h2>Ingredients</h2>
 <div class="recipeGradient"></div>
-LLOLOLOLOL NEEDA LOOP THROUGH INGREDIENTS, AND MAKE ALL THE OTHER TEXT STUFF FANCYYYYYYYYYYYYYYYY
+I needa make fancinessssssssssssssssssss
+
+<ul>
+{{#each ingredients}}
+<li>{{this}}</li>
+{{/each}}
+</ul>
+
+{{steps this}}
+
+
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
 </div>
