--- a/client/index.html
+++ b/client/index.html
@@ -9,16 +9,13 @@
 <div class="container">
     <h1 class="index-title">OH, MY NOM! </h1>
 	<a href="/nomrecipe" class="gimme">GIMME</a><br><br>
-	<a href="" class="advanced">Advanced</a>
+<!--	<a href="" class="advanced">Advanced</a>-->
 	<div class="settings">
 	<form id="recipeSetting">
-		<input type="checkbox" id="veg"> Vegetarian
-		<br>
-		<input type="checkbox" id="vegan"> Vegan
-		<br>
-		<input type="checkbox" id="gluten"> Gluten Free
-		<br>
-		<input type="checkbox" id="dairy"> Dairy Free
+		<div><input type="checkbox" id="veg"> Vegetarian</div>
+		<div><input type="checkbox" id="vegan"> Vegan</div>
+		<div><input type="checkbox" id="gluten"> Gluten Free</div>
+		<div><input type="checkbox" id="dairy"> Dairy Free</div>
 	</form>
 	</div>
 
